add event handler onto BookView to remove the book for .delete clicked

--- a/site/index.html
+++ b/site/index.html
@@ -69,7 +69,7 @@
       <li><%= releaseDate %></li>
       <li><%= keywords %></li>
     </ul>
-    <a href="#" class="btn btn-small bg-red delete">Delete</a>
+    <button class="btn btn-small bg-red delete">Delete</button>
 </script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
